--- a/style.css
+++ b/style.css
@@ -14,9 +14,7 @@
 .container{
     width: 75rem;
     display: flex;
-
-
-    flex-direction: column;
+    align-items: center;
 }
 
 #bike{
@@ -44,9 +42,10 @@ nav{
     display: flex;
     background-color:#111111;
     align-items: baseline;
-    justify-content: space-between;
+    justify-content: center;
     height: 50px;
     flex-direction:row;
+    width: 100%;
 }
 #background{
     width: 100%;
@@ -140,9 +139,11 @@ footer{
     background-color:#111111;
     margin-top: 50px;
     color: #FFFFFF;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: row;
     text-align: right;
+    width: 100%;
+    height: auto;
 
 
 }
@@ -154,4 +155,12 @@ section{
 }
 #red{
     color: #E40515;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+article{
+    margin-top: 100px;
 }
