--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ nav .nav__container span{
     padding: 0 1rem;
     font-size: 2rem;
 }
+nav .nav__container ul li{
+    padding-left: 1.5rem;
+    font-size: 1.5rem;
+}
 nav .nav__container ul li span{
     color: white;
 }nav .nav__container ul li span:hover{
@@ -79,6 +83,7 @@ main section{
 main .main__section-new__container{
     display: flex;
     justify-content: center;
+
 }
 
 main section h1{
@@ -92,14 +97,15 @@ main section h2{
     border: 0.3rem solid #111111;
 }
 main section h2:hover{
-    color: white;
-    background-color: #E40515;
+    color: #111111;
+    background-color: #FFFFFF;
 
 }
 main .main__section-new--container article{
     display: flex;
-    margin: 2rem ;
     justify-content: center;
+    width: 90%;
+    margin: 5%;
 }
 main .main__section-new--container article p{
     margin: 1rem 0;
@@ -111,6 +117,7 @@ main .main__section-new--container article ul{
 main .main__section-new--container article ul li{
     list-style-position: inside;
     padding: 0.5rem;
+    font-weight: bold;
 }
 
 main .main__section-sales--container{
@@ -144,6 +151,11 @@ footer .footer__container{
 }
 footer .footer__container .footer__container-contact{
     color: #FFFFFF;
+    flex: auto;
+    text-align: right;
+}
+footer .footer__container-image{
+    flex: auto;
 }
 footer .footer__container .footer__container-contact h2{
     color: #E40515;
@@ -168,10 +180,85 @@ footer .footer__container .footer__container-contact a:hover{
 #top a{
     color: #FFFFFF;
     background-color: #E40515;
-    padding: 1rem 2rem;
+    padding: 0 1rem;
 }
 #top a:hover{
     color: #111111;
     background-color: #FFFFFF;
     border: 2px solid red;
+}
+
+@media screen and (max-width: 80rem){
+    .dilivery__container, nav, header, main, footer {
+        padding: 0 2rem;
+    }
+    header .header__container h1 {
+        font-size: 4rem;
+    }
+    header .header__container h2{
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 70rem){
+    header .header__container h1{
+        font-size: 3.5em;
+    }
+    header .header__container h2{
+        font-size: 1.5rem;
+    }
+}
+@media screen and (max-width: 60rem){
+    header .header__container h1{
+        font-size: 3rem;
+    }
+    header .header__container h2{
+        font-size: 1.2rem;
+    }
+}
+@media screen and (max-width: 55rem){
+    header .header__container h1{
+        font-size: 2.5rem;
+    }
+    header .header__container h2{
+        font-size: 1rem;
+    }
+    .dilivery__container{
+        display: none;
+    }
+}
+@media screen and (max-width: 45rem){
+    nav .nav__container h1{
+        font-size: 2rem;
+    }
+    main section h2{
+        text-align: center;
+    }
+    main .main__section-new--container article{
+        flex-direction: column;
+    }
+    main .main__section-new--container article img{
+        order: 2;
+        width: 80%;
+        margin: 0 10%;
+    }
+    main .main__section-sales--container {
+        flex-direction: column;
+    }
+    main .main__section-sales--container div{
+        flex-direction: column;
+
+    }
+    main .main__section-sales--container article{
+        width: 80%;
+        margin: 0 10%;
+    }
+    footer .footer__container{
+        flex-direction: column;
+        align-items: stretch;
+    }
+    footer .footer__container .footer__container-contact{
+        text-align: center;
+    }
+
+
 }
